package 创建型模式.工厂方法模式.工厂方法的重载;

public interface Logger {
    public void writeLog();
}
